# cnn-img-classify

./: .gitignore  README.md  pyproject.toml
scripts/: check_brightness.py  detect_blink.py  group_similar.py  vgg_only_group_similar.py
