[tool.poetry]
name = "cnn-img-classify"
version = "0.1.0"
description = ""
authors = ["EIKINAKAYAMA <eiki111ixa@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pkginfo = "^1.12.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
